--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     height: auto;
 }
 body{
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 p{
     font-size: 20px;
@@ -24,8 +24,4 @@ header{
     padding: 10px;
     margin: auto;
     border-radius: 50px
-}
-.card.container{
-    background-color: gray;
-    padding: 10px;
 }
