--- a/style.css
+++ b/style.css
@@ -38,5 +38,6 @@ header{
 .card2{
     padding: 20px;
     border-radius: 30px;
-    background-color: whitesmoke
+    background-color: whitesmoke;
+    width: 30px;
 }
