--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ header{
     border-radius: 30px;
     padding: 100px;
     background-color: whitesmoke;
+    width: 30px;
 }
 .card2{
     padding: 20px;
